# Skiena-Chapter4

./: CMakeLists.txt  exercises.c  exercises.h  heap.c  heap.h  leetCode.c  leetCode.h  main.c  sorting.c  sorting.h
tests/: CMakeLists.txt
tests/quickSort/: CMakeLists.txt  quickSortTest.c
